focus: fix focus styles for elements getting clipped

--- a/src/components/blocks/card/_card.scss
+++ b/src/components/blocks/card/_card.scss
@@ -13,6 +13,9 @@
     min-height: 480px;
   }
 
+  /* default focus style can be clipped if inside a carousel */
+  @include mixins.focus-raisedPseudoFocus;
+
   &__image-container {
     overflow: hidden;
   }
