--- a/src/components/blocks/object-card/_object-card.scss
+++ b/src/components/blocks/object-card/_object-card.scss
@@ -13,6 +13,9 @@
 
   &__anchor {
     display: block;
+
+    /* default focus style can be clipped if inside a carousel */
+    @include mixins.focus-raisedPseudoFocus;
   }
 
   &__img-pane {
