--- a/src/components/blocks/toggle-set/_toggle-set.scss
+++ b/src/components/blocks/toggle-set/_toggle-set.scss
@@ -21,6 +21,10 @@
     scroll-snap-align: center;
     scroll-snap-stop: normal;
     white-space: nowrap;
+
+    &:focus-visible {
+      @include mixins.focus-insetFocus;
+    }
   }
 
   &__target {
